# ina219

./: CMakeLists.txt  LICENSE  README.md  idf_component.yml
example/esp-idf/: CMakeLists.txt  Makefile
example/esp-idf/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
example/linux/: CMakeLists.txt  main.c
include/ina219/: ina219.h  sys_esp.h  sys_linux.h
lib/: esp-idf.c  helpers.h  ina219.c  linux.c  sys.h
